[gd_scene load_steps=4 format=2]

[ext_resource path="res://Chest.gd" type="Script" id=1]
[ext_resource path="res://Texture/95983.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[node name="Chest" type="Node2D" index="0"]

script = ExtResource( 1 )
id = -1
content_type = "HEALTH"
content_amount = 20

[node name="SpriteClosed" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 174, 50.75, 30.5, 29.75 )
_sections_unfolded = [ "Region" ]

[node name="SpriteOpened" type="Sprite" parent="." index="1"]

visible = false
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 208.5, 47.25, 37.5, 33.5 )
_sections_unfolded = [ "Region" ]

[node name="Area2D" type="Area2D" parent="." index="2"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

position = Vector2( 2.38419e-07, 2.38419e-07 )
scale = Vector2( 1.53846, 1.53846 )
shape = SubResource( 1 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]


